# blockcaptain

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yml  security.yml
blkcaptapp/: Cargo.toml
blkcaptapp/src/: lib.rs  slogext.rs
blkcaptctl/: Cargo.toml
blkcaptctl/src/: commands.rs  main.rs  ui.rs
blkcaptctl/src/commands/: mod.rs  observer.rs  pool.rs  restic.rs  sync.rs
blkcaptwrk/: Cargo.toml
blkcaptwrk/src/: actorbase.rs  commands.rs  lib.rs  main.rs  slogext.rs  snapshots.rs  tasks.rs  worker.rs  xactorext.rs
blkcaptwrk/src/actors/: captain.rs  container.rs  dataset.rs  intel.rs  jobdispatch.rs  localreceiver.rs  localsender.rs  observation.rs  pool.rs  restic.rs  server.rs  sync.rs  transfer.rs
debian/: service
eng/ci/: build.sh  clippy.sh  integration-run.sh  setup-build.sh  setup-integration.sh  setup-test.sh  setup.sh  test-report.sh  test-run.sh
libblkcapt/: Cargo.toml
libblkcapt/src/: contextualize.rs  lib.rs  parsing.rs  process.rs  worker.rs
libblkcapt/src/core/: localsndrcv.rs  mod.rs  restic.rs  retention.rs  sync.rs  system.rs
libblkcapt/src/model/: entities.rs  mod.rs  storage.rs
libblkcapt/src/sys/: btrfs.rs  fs.rs  mod.rs  net.rs  process.rs
scripts/: build-deb.sh  debug-devbox.sh  sync-to-devbox.sh
src/: btrfs.rs  contextualize.rs  filesystem.rs  lib.rs  managed.rs  parsing.rs  process.rs  snapshot.rs  state.rs  worker.rs
src/core/: mod.rs
src/model/: action.rs  btrfs.rs  entities.rs  mod.rs  storage.rs
src/sys/: btrfs.rs  fs.rs  mod.rs
