[package]
name = "blkcapt"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
duct = "0.13.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"
mnt = "0.3.1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.3"
uuid = { version = "0.8", features = ["serde", "v5"] }
lazy_static = "1.4"
human-panic = "1.0"
strum = "0.19"
strum_macros = "0.19"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.0"
humantime-serde = "1.0"
comfy-table = "1.1"

[dev-dependencies]
mockall = "0.7"
serial_test = "0.4"
indoc = "0.3"

[profile.release]
opt-level = 1
overflow-checks = true
