[package]
name = "blkcaptapp"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
human-panic = "1.0"
tokio = { version = "0.2", features = ["full"] }
log = { version = "0.4", features = ["std"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-scope = "4.3.0"
slog-atomic = "3.0.0"

[dev-dependencies]
