[package]
name = "blkcaptapp"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
libblkcapt = { path = "../libblkcapt" }
anyhow = "1.0.31"
tokio = { version = "1.7", features = ["full"] }
log = { version = "0.4", features = ["std"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.6.0"
slog-scope = "4.3.0"
slog-atomic = "3.0.0"

[dev-dependencies]
mockall = "0.9.0"
