[package]
name = "blkcaptctl"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
libblkcapt = { path = "../libblkcapt" }
clap = "3.0.0-beta.1"
anyhow = "1.0.31"
thiserror = "1.0.20"
log = "0.4"
pretty_env_logger = "0.4"
human-panic = "1.0"
comfy-table = "1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
humantime = "2.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-scope = "4.3.0"

[dev-dependencies]

