[package]
name = "blkcaptctl"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"
license-file = "../LICENSE"
description = "Data integrity system management for Linux."

[dependencies]
libblkcapt = { path = "../libblkcapt" }
blkcaptapp = { path = "../blkcaptapp" }
clap = { git = "https://github.com/clap-rs/clap", rev = "022f18278e67cccff53b73fd96ed45abcda028c3" }
anyhow = "1.0.31"
thiserror = "1.0.20"
human-panic = "1.0"
comfy-table = "1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
humantime = "2.0"
hyper = "0.14"
tokio = { version = "1.7", features = ["full"] }
futures-util = "0.3"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.6.0"
slog-atomic = "3.0.0"
slog-scope = "4.3.0"
serde_json = "1.0"
bytes = "1.0"
dialoguer = "0.7"

[dev-dependencies]

[package.metadata.deb]
name = "blockcaptain"
assets = [
    ["target/release/blkcaptwrk", "usr/lib/blockcaptain/blkcaptd", "755"],
    ["target/release/blkcaptctl", "usr/bin/blkcapt", "755"],
]
maintainer-scripts = "../debian/"
systemd-units = { enable = false, start = false, unit-name = "blockcaptain" }
