[package]
name = "blkcaptwrk"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
libblkcapt = { path = "../libblkcapt" }
blkcaptapp = { path = "../blkcaptapp" }
anyhow = "1.0.31"
thiserror = "1.0.20"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
humantime = "2.0"
async-trait = "0.1"
xactor = { version = "0.7", features = ["runtime-tokio"], default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "0.5"
heck = "0.3.1"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-scope = "4.3.0"
cron = "0.6.1"

[dev-dependencies]
