[package]
name = "blkcaptwrk"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
libblkcapt = { path = "../libblkcapt" }
blkcaptapp = { path = "../blkcaptapp" }
anyhow = "1.0.31"
thiserror = "1.0.20"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.7", features = ["full"] }
futures-util = "0.3"
humantime = "2.0"
async-trait = "0.1"
xactor = { git = "https://github.com/wpbrown/xactor", branch = "tokio10", features = ["runtime-tokio"], default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "1.0"
heck = "0.3.1"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-scope = "4.3.0"
slog-atomic = "3.0.0"
cron = "0.7"
once_cell = "1.4"
paste = "1.0.2"
strum_macros = "0.20"
derive_more = "0.99.11"
tokio-stream = { version = "0.1", features = ["net"] }
warp = "0.3"
nix = "0.19.0"
libsystemd = "0.2.1"
pin-project = "1.0"

[dev-dependencies]
