[package]
name = "libblkcapt"
version = "0.1.0"
authors = ["opensource@rebeagle.com"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"
mnt = "0.3.1"
regex = "1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.4"
strum = "0.20"
strum_macros = "0.20"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.0"
humantime-serde = "1.0"
derivative = "2.2"
http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
hyper-timeout = "0.4"
hyperlocal = "0.8"
tokio = { version = "1.0", features = ["full"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-scope = "4.3.0"
cron = "0.7"
nix = "0.19.0"
mockall_double = "0.2"

[dev-dependencies]
mockall = "0.9"
serial_test = "0.5"
indoc = "1.0"
